# chaos-network

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  notes.md
chaos-network-derive/: Cargo.toml
chaos-network-derive/src/: lib.rs
layers/1234/: layer1.txt
networks/0/: 1.json
networks/1/: 1.json  1.txt
networks/1680065966/: 1.json
python-tests/: flake.nix
python-tests/tests/: head_network.py  order_network.py
src/: lib.rs  main.rs
src/gradients/: gradients.rs  mod.rs
src/network/: chaos_network.rs  clone.rs  fmt.rs  mod.rs  network.rs  network_handler.rs
src/network/chaos_network/: chaos_network.rs  clone.rs  fmt.rs  mod.rs  network_handler.rs
src/network/chaos_network/gradients/: mod.rs
src/network/chaos_network/optimizers/: adam.rs  mod.rs  optimizers.rs
src/network/chaos_network/tensor_operations/: add.rs  mish.rs  mod.rs  mul.rs  nll.rs  split_on_add.rs
src/network/chaos_network/tensors/: mod.rs
src/network/head_network/: head_network.rs  mod.rs
src/network/optimizers/: adam.rs  mod.rs  optimizers.rs
src/network/order_network/: mod.rs  order_network.rs
src/tensor_operations/: add.rs  exp.rs  log.rs  mish.rs  mod.rs  mse.rs  mul.rs  nll.rs  relu.rs  split_on_add.rs
src/tensors/: clone.rs  helpers.rs  mod.rs  new.rs  tensor.rs  tensors.rs
