[package]
name = "chaos-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For flamegraph
# [profile.release]
# debug = true

# Enable proc macros
proc_macro=true

[dependencies]
chaos-network-derive = { path = "chaos-network-derive" }
rand = "0.8.5"
rust-mnist = "0.2"
termion = "2.0.1"
fasthash = "0.4.0"
rustc-hash = "1.1.0"
rayon = "1.6.1"
parking_lot = "0.12"
cifar-ten = { version = "0.5.1", features = ["download"] }
serde = { version = "1.0.9", features = ["derive"] }
serde_json = "1.0.9"
