[package]
name = "chaos-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For flamegraph
# [profile.release]
# debug = true

# Build flags
[build]
rustflags = "-C target-cpu=native"

# Enable proc macros
proc_macro=true
feature = "slice_pattern"

[dependencies]
chaos-network-derive = { path = "chaos-network-derive" }
rand = "0.8.5"
rust-mnist = "0.2"
termion = "2.0.1"
fasthash = "0.4.0"
rustc-hash = "1.1.0"
rayon = "1.6.1"
parking_lot = "0.12"
cifar-ten = { version = "0.5.1", features = ["download"] }
serde = { version = "1.0.9", features = ["derive"] }
serde_json = "1.0.9"
matrixmultiply = "0.3.2"
mnist = "0.5.0"
rand_distr = "0.4.3"
