[package]
name = "chaos-network-derive"
version = "0.1.0"
edition = "2021"

# Enable proc-macros
[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = "2.0.4"
proc-macro2 = "1.0.52"
serde = { version = "1.0.9", features = ["derive"] }
serde_json = "1.0.9"
